# Lincompliance

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-compose.yml  ort-builder.Dockerfile
conf/: api.service
front/: .env.sample  README.md  dev.Dockerfile  package.json  prod.Dockerfile
front/public/: index.html  manifest.json
front/src/: i18n.ts  index.tsx  react-i18next.d.ts
front/src/api/: Client.ts  Package.ts
front/src/components/: App.test.tsx  App.tsx
front/src/components/body/: Body.tsx  EC.tsx
front/src/components/header/: Header.tsx
front/src/components/package/: PackageTable.tsx  PackageTableRow.tsx  UploadForm.tsx
front/src/components/utils/: Loader.tsx  UploadFile.tsx
front/src/locales/: en.json  fr.json
front/src/models/: Package.ts
front/src/style/: index.css  theme.css
libs/: README.md  dev.Dockerfile  prod.Dockerfile  pyproject.toml  setup.cfg  tox.ini  uwsgi.ini
libs/conf/: crypto_analyser.json
libs/scripts/: python_install.sh
libs/src/api/: __init__.py  __main__.py  logger.py
libs/src/api/package/: resources.py
libs/src/common/: file.py  strings.py
libs/src/dao/: package.py
libs/src/eccn/: __init__.py  interface.py
libs/src/eccn/crypto_analyser/: __init__.py  algo.py
libs/src/process/: __init__.py  ort.py
libs/tests/api/: BaseTest.py  test_package.py  test_root.py
libs/tests/common/: test_file.py  test_strings.py
libs/tests/process/: test_process.py
nginx/: nginx-dev.conf  nginx-prod.conf
prolog/: Dockerfile  predicats.pl  server.pl
