# File              : setup.cfg
# License           : AGPL-3.0-or-later
# Author            : Pierre Marty <pmarty@linagora.com>
# Date              : 2022.02.02
# Last Modified Date: 2022.02.02
# Last Modified By  : Pierre Marty <pmarty@linagora.com>
[metadata]
name = linapi
version = 0.0.1
author = Linagora
author_email = cbouttes@linagora.com
description = Law application compliance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/linagora/Lincompliance
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir=
    =src
packages =
    common
    eccn.crypto_analyser
    eccn
    process
    dao
    api.package
    api
install_requires =
    requests==2.27.1
    flask-apispec==0.11.0
    werkzeug==2.0.2
    flask==2.0.2
    flask_restful==0.3.9
    flask-cors==3.0.10
    ansi2html==1.7.0
    pyquery==1.4.3
python_requires = >=3.6

[options.entry_points]
console_scripts =
    api=api:main

[options.packages.find]
where=src
